<resources>
    <string name="app_name">Asteroid Android</string>
    <string name="serverScreenHeader">Select or Add Server</string>
    <string name="server_add_button_description">Add new server</string>
    <string name="addServerScreenHeader">Add Server</string>
    <string name="edit_server_screen_header">Edit Server</string>
    <string name="server_name_hint">Server name</string>
    <string name="add_server_button_text">Add Server</string>
    <string name="update_server_button_text">Save Changes</string>
    <string name="server_address_hint">Server address</string>
    <string name="server_private_text">Server is private:</string>
    <string name="info_about_server_private_state">Info about server public/private setting</string>
    <string name="server_privacy_full_info">Set this switch to \'on\' if the server is only accessible from the current network (e.g the WiFi network you are connected to). Leave the switch \'off\' if the server is publicly accessible, i.e if you could access it from the same server address whilst connected to a different network.</string>
    <string name="connection_good_indicator">Indicator that a connection to this server can be made</string>
    <string name="connection_bad_indicator">Indicator that a connection to this server cannot be made</string>
    <string name="placeholder">Placeholder</string>
    <string name="delete_confirm_text">Are you sure you want to delete this server? This action cannot be undone.</string>
    <string name="literal_yes">Yes</string>
    <string name="literal_no">No</string>
    <string name="server_name_empty_prompt">Please enter a server name!</string>
    <string name="server_address_empty_prompt">Please enter a server address!</string>
    <string name="server_name_in_use_prompt">Server name already in use!</string>
    <string name="server_address_in_use_prompt">This server is already in your list!</string>
    <string name="upvote_this_song">Upvote this song</string>
    <string name="downvote_this_song">Downvote this song</string>
    <string name="placeholder_number">0</string>
    <string name="see_less_info_about_this_song">See less info about this song</string>
    <string name="all_songs_header">All Songs</string>
    <string name="see_more_info_about_this_song">See more info about this song</string>
    <string name="back_to_server_list">Back to server list</string>
    <string name="open_side_menu">Open side menu</string>
    <string name="refresh_song_list">Refresh song list</string>
    <string name="menu_section_voting">Voting</string>
    <string name="menu_subsection_song_list">Song List</string>
    <string name="return_to_server_list">Return To Server List</string>
    <string name="server_name_not_recognised">Server name not recognised</string>
    <string name="queue_header">Queue</string>
    <string name="refresh_queue">Refresh queue</string>
    <string name="menu_subsection_queue">Queue</string>
    <string name="currently_playing">Currently playing: </string>
    <string name="menu_section_request">Request</string>
    <string name="menu_subsection_url_request">URL Request</string>
    <string name="menu_section_about">About</string>
    <string name="menu_subsection_credits">Credits</string>
    <string name="url_request_header">URL Request</string>
    <string name="make_request">Make request</string>
    <string name="url_request_hint">Enter URL here…</string>
    <string name="credits_header">Credits</string>
    <string name="credits_text">
        Asteroid built by <a href="https://github.com/dustpancake">
            Fergus Baker
        </a> and <a href="https://github.com/JR-Mitchell">
            JR Mitchell
        </a> <br />
        GitHub repo at:
        <a href="https://github.com/asteroid-music">
            asteroid-music
        </a>
    </string>
    <string name="url_share_external_hint">Server to share URL to:</string>
</resources>