<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/placeholder"
        android:id="@+id/navMenuTitle" />

    <item android:title="@string/menu_section_voting">
        <menu>
            <item
                android:id="@+id/navQueue"
                android:title="@string/menu_subsection_queue" />
            <item
                android:id="@+id/navSongList"
                android:title="@string/menu_subsection_song_list" />
        </menu>
    </item>

    <item android:title="@string/menu_section_request">
        <menu>
            <item
                android:id="@+id/navUrlReq"
                android:title="@string/menu_subsection_url_request" />
        </menu>
    </item>

    <item android:title="@string/menu_section_about">
        <menu>
            <item
                android:id="@+id/navCredits"
                android:title="@string/menu_subsection_credits" />
        </menu>
    </item>

    <item
        android:id="@+id/navServerList"
        android:title="@string/return_to_server_list" />
</menu>