<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="?attr/colorPrimary">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_to_server_list"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/addServerScreenHeader"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextServerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/server_name_hint"
            android:ems="10"
            android:hint="@string/server_name_hint"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/server_private_text" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/serverPrivateSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/privateInfoButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:contentDescription="@string/info_about_server_private_state"
                app:srcCompat="@android:drawable/ic_menu_info_details" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextServerAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/server_address_hint"
            android:ems="10"
            android:hint="@string/server_address_hint"
            android:inputType="text" />

        <Button
            android:id="@+id/addServerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_server_button_text" />
    </LinearLayout>

</LinearLayout>