<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/deleteConfirmText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_confirm_text"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/deleteYesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/literal_yes"
            card_view:layout_constraintEnd_toStartOf="@+id/deleteNoButton"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/deleteConfirmText" />

        <Button
            android:id="@+id/deleteNoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/literal_no"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/deleteYesButton"
            card_view:layout_constraintTop_toBottomOf="@+id/deleteConfirmText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>